[tool.poetry]
name = "multi-modal"
version = "0.1.0"
description = ""
authors = ["CarolRaydan <couroula@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pyttsx3 = "^2.98"
speechrecognition = "^3.14.1"
googletrans = "3.1.0a0"
pyaudio = "^0.2.14"
google-cloud-texttospeech = "^2.25.0"
pydub = "^0.25.1"
simpleaudio = "^1.0.4"
ffmpeg = "^1.4"
pygame = "^2.6.1"
requests = "^2.32.3"
numpy = "^2.2.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
flask = "^3.1.0"
twilio = "^9.4.6"
google-cloud-speech = "^2.31.0"
backoff = "^2.2.1"
sounddevice = "^0.5.1"
webrtcvad = "^2.0.10"
vad = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
